Fix background image stretching

--- a/myStyles.css
+++ b/myStyles.css
@@ -491,7 +491,7 @@ h1 {
 
 body {
     background-image: url("https://pngimg.com/uploads/ironman/ironman_PNG60.png");
-    background-size: 30% 35%;
+    background-size: 30%;
     background-repeat: no-repeat;
     background-position: right;
 }
